Bug 593144 - Try to fix intermittent orange in test_bug593573.html. rs=sicking, a=test-only
UltraBlame original commit: a53822b8aa41c5334cc6bc12bbd11f45c6178dc4

--- a/docshell/test/file_bug590573_1.html
+++ b/docshell/test/file_bug590573_1.html
@@ -6,9 +6,9 @@ body
 onpopstate
 =
 '
-parent
+opener
 .
-iframe1Popstate
+page1Popstate
 (
 )
 ;
@@ -21,7 +21,8 @@ style
 '
 height
 :
-1000px
+300
+%
 '
 id
 =
