--- a/docshell/test/file_bug590573_2.html
+++ b/docshell/test/file_bug590573_2.html
@@ -6,9 +6,9 @@ body
 onpopstate
 =
 '
-parent
+opener
 .
-iframe2Popstate
+page2Popstate
 (
 )
 '
@@ -20,7 +20,8 @@ style
 '
 height
 :
-1000px
+300
+%
 '
 id
 =
