--- a/docshell/test/test_bug590573.html
+++ b/docshell/test/test_bug590573.html
@@ -168,60 +168,20 @@ Bug
 a
 >
 <
-iframe
-id
-=
-'
-iframe
-'
-width
-=
-'
-100px
-'
-height
-=
-'
-100px
-'
-src
-=
-'
-file_bug590573_1
-.
-html
-'
->
-<
-/
-iframe
->
-<
-div
->
-iframe
-'
-s
-scrollY
-=
-<
-span
-id
-=
-'
-iframeScrollLabel
-'
->
-<
-/
-span
->
-<
-/
-div
->
-<
 script
+type
+=
+'
+application
+/
+javascript
+;
+version
+=
+1
+.
+7
+'
 >
 SimpleTest
 .
@@ -229,48 +189,6 @@ waitForExplicitFinish
 (
 )
 ;
-setTimeout
-(
-updateIframeScroll
-100
-)
-;
-function
-updateIframeScroll
-(
-)
-{
-document
-.
-getElementById
-(
-'
-iframeScrollLabel
-'
-)
-.
-innerHTML
-=
-document
-.
-getElementById
-(
-'
-iframe
-'
-)
-.
-contentWindow
-.
-scrollY
-;
-setTimeout
-(
-updateIframeScroll
-100
-)
-;
-}
 /
 /
 Listen
@@ -287,21 +205,21 @@ page
 loaded
 .
 var
-iframe1PopstateCallbackEnabled
+page1PopstateCallbackEnabled
 =
 true
 ;
 function
-iframe1Popstate
+page1Popstate
 (
 )
 {
 if
 (
-iframe1PopstateCallbackEnabled
+page1PopstateCallbackEnabled
 )
 {
-iframe1PopstateCallbackEnabled
+page1PopstateCallbackEnabled
 =
 false
 ;
@@ -309,7 +227,7 @@ dump
 (
 '
 Got
-iframe1
+page1
 popstate
 .
 \
@@ -317,7 +235,7 @@ n
 '
 )
 ;
-iframeLoad
+pageLoad
 (
 )
 ;
@@ -328,7 +246,7 @@ dump
 (
 '
 Ignoring
-iframe1
+page1
 popstate
 .
 \
@@ -339,21 +257,21 @@ n
 }
 }
 var
-iframe2PopstateCallbackEnabled
+page2PopstateCallbackEnabled
 =
 false
 ;
 function
-iframe2Popstate
+page2Popstate
 (
 )
 {
 if
 (
-iframe2PopstateCallbackEnabled
+page2PopstateCallbackEnabled
 )
 {
-iframe2PopstateCallbackEnabled
+page2PopstateCallbackEnabled
 =
 false
 ;
@@ -361,7 +279,7 @@ dump
 (
 '
 Got
-iframe2
+page2
 popstate
 .
 \
@@ -369,7 +287,7 @@ n
 '
 )
 ;
-iframeLoad
+pageLoad
 (
 )
 ;
@@ -380,7 +298,7 @@ dump
 (
 '
 Ignoring
-iframe2
+page2
 popstate
 .
 \
@@ -390,35 +308,269 @@ n
 ;
 }
 }
+function
+dumpSHistory
+(
+theWindow
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+const
+Ci
+=
+Components
+.
+interfaces
+;
+let
+sh
+=
+theWindow
+.
+QueryInterface
+(
+Ci
+.
+nsIInterfaceRequestor
+)
+.
+getInterface
+(
+Ci
+.
+nsIWebNavigation
+)
+.
+sessionHistory
+;
+if
+(
+!
+sh
+)
+{
+dump
+(
+"
+window
+has
+no
+shistory
+.
+\
+n
+"
+)
+;
+return
+;
+}
+dump
+(
+"
+count
+:
+"
++
+sh
+.
+count
++
+"
+\
+n
+"
+)
+;
+dump
+(
+"
+index
+:
+"
++
+sh
+.
+index
++
+"
+\
+n
+"
+)
+;
+dump
+(
+"
+requestedIndex
+:
+"
++
+sh
+.
+requestedIndex
++
+"
+\
+n
+"
+)
+;
+for
+(
+let
+i
+=
+0
+;
+i
+<
+sh
+.
+count
+;
+i
++
++
+)
+{
+let
+shentry
+=
+sh
+.
+getEntryAtIndex
+(
+i
+false
+)
+;
+dump
+(
+"
+"
++
+i
++
+"
+:
+"
++
+shentry
+.
+URI
+.
+spec
++
+'
+\
+n
+'
+)
+;
+shentry
+.
+QueryInterface
+(
+Ci
+.
+nsISHContainer
+)
+;
+for
+(
+let
+j
+=
+0
+;
+j
+<
+shentry
+.
+childCount
+;
+j
++
++
+)
+{
+let
+child
+=
+shentry
+.
+GetChildAt
+(
+j
+)
+;
+dump
+(
+"
+child
+"
++
+j
++
+"
+:
+"
++
+child
+.
+URI
+.
+spec
++
+'
+\
+n
+'
+)
+;
+}
+}
+return
+sh
+;
+}
+var
+popup
+=
+window
+.
+open
+(
+'
+file_bug590573_1
+.
+html
+'
+)
+;
 var
 loads
 =
 0
 ;
 function
-iframeLoad
+pageLoad
 (
 )
 {
-var
-iframe
-=
-document
-.
-getElementById
-(
-'
-iframe
-'
-)
-;
-var
-iframeCw
-=
-iframe
-.
-contentWindow
-;
 loads
 +
 +
@@ -426,7 +578,7 @@ loads
 dump
 (
 '
-iframeLoad
+pageLoad
 (
 loads
 =
@@ -435,10 +587,25 @@ loads
 loads
 +
 '
+page
+location
+=
+'
++
+popup
+.
+location
++
+'
 )
 \
 n
 '
+)
+;
+dumpSHistory
+(
+window
 )
 ;
 if
@@ -451,7 +618,7 @@ loads
 {
 is
 (
-iframeCw
+popup
 .
 scrollY
 0
@@ -461,7 +628,7 @@ test
 "
 )
 ;
-iframeCw
+popup
 .
 scroll
 (
@@ -469,7 +636,7 @@ scroll
 100
 )
 ;
-iframeCw
+popup
 .
 history
 .
@@ -487,7 +654,7 @@ pushed
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 100
@@ -497,7 +664,7 @@ test
 "
 )
 ;
-iframeCw
+popup
 .
 scroll
 (
@@ -516,7 +683,7 @@ s
 position
 to
 200
-iframeCw
+popup
 .
 history
 .
@@ -526,7 +693,7 @@ back
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 100
@@ -536,7 +703,7 @@ test
 "
 )
 ;
-iframeCw
+popup
 .
 scroll
 (
@@ -554,7 +721,7 @@ s
 position
 to
 150
-iframeCw
+popup
 .
 history
 .
@@ -564,7 +731,7 @@ forward
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 200
@@ -574,7 +741,7 @@ test
 "
 )
 ;
-iframeCw
+popup
 .
 history
 .
@@ -584,7 +751,7 @@ back
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 150
@@ -594,7 +761,7 @@ test
 "
 )
 ;
-iframeCw
+popup
 .
 history
 .
@@ -604,7 +771,7 @@ forward
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 200
@@ -695,7 +862,7 @@ entry
 .
 setTimeout
 (
-iframeLoad
+pageLoad
 0
 )
 ;
@@ -709,11 +876,11 @@ loads
 2
 )
 {
-iframe2PopstateCallbackEnabled
+page2PopstateCallbackEnabled
 =
 true
 ;
-iframeCw
+popup
 .
 location
 =
@@ -735,7 +902,7 @@ loads
 {
 ok
 (
-iframeCw
+popup
 .
 location
 .
@@ -754,7 +921,7 @@ Location
 was
 "
 +
-iframeCw
+popup
 .
 location
 +
@@ -771,7 +938,7 @@ html
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 0
@@ -781,7 +948,7 @@ test
 "
 )
 ;
-iframeCw
+popup
 .
 scroll
 (
@@ -818,7 +985,7 @@ properly
 .
 setTimeout
 (
-iframeLoad
+pageLoad
 0
 )
 ;
@@ -832,11 +999,11 @@ loads
 4
 )
 {
-iframe1PopstateCallbackEnabled
+page1PopstateCallbackEnabled
 =
 true
 ;
-iframeCw
+popup
 .
 history
 .
@@ -872,7 +1039,7 @@ positions
 .
 setTimeout
 (
-iframeLoad
+pageLoad
 0
 )
 ;
@@ -888,7 +1055,7 @@ loads
 {
 is
 (
-iframeCw
+popup
 .
 location
 .
@@ -901,7 +1068,7 @@ pushed
 ;
 ok
 (
-iframeCw
+popup
 .
 document
 .
@@ -912,7 +1079,7 @@ div1
 '
 )
 '
-Iframe
+page
 should
 have
 div1
@@ -922,7 +1089,7 @@ div1
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 200
@@ -932,7 +1099,7 @@ test
 "
 )
 ;
-iframeCw
+popup
 .
 history
 .
@@ -942,7 +1109,7 @@ back
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 150
@@ -952,7 +1119,7 @@ test
 "
 )
 ;
-iframeCw
+popup
 .
 history
 .
@@ -962,7 +1129,7 @@ forward
 ;
 is
 (
-iframeCw
+popup
 .
 scrollY
 200
@@ -983,7 +1150,7 @@ time
 .
 setTimeout
 (
-iframeLoad
+pageLoad
 0
 )
 ;
@@ -997,11 +1164,11 @@ loads
 7
 )
 {
-iframe2PopstateCallbackEnabled
+page2PopstateCallbackEnabled
 =
 true
 ;
-iframeCw
+popup
 .
 history
 .
@@ -1021,7 +1188,7 @@ loads
 {
 is
 (
-iframeCw
+popup
 .
 scrollY
 300
@@ -1029,6 +1196,12 @@ scrollY
 test
 11
 "
+)
+;
+popup
+.
+close
+(
 )
 ;
 SimpleTest
