Bug 593125 followup: tweak netOffline error text to specify that "Work Offline" is a menu item, r=Pike, a=me
UltraBlame original commit: 17c0971e73804b3d42eb85ff90d52e21494ee74c

--- a/docshell/resources/content/netError.xhtml
+++ b/docshell/resources/content/netError.xhtml
@@ -90,7 +90,7 @@ in
 case
 netOffline
 .
-longDesc2
+overrideLongDesc
 is
 not
 defined
@@ -102,7 +102,7 @@ defined
 ENTITY
 netOffline
 .
-longDesc2
+overrideLongDesc
 "
 &
 netOffline
@@ -3155,7 +3155,7 @@ ed_netOffline
 &
 netOffline
 .
-longDesc2
+overrideLongDesc
 ;
 <
 /
