Bug 598529 - Improve form validation messages with Alex Faaborg recommandations. r=sicking ui-r=limi a=blocking-beta7
UltraBlame original commit: ad2288d1b896e7d7b45940ca82fc9335c769a8bf

--- a/content/html/content/test/test_bug345512.html
+++ b/content/html/content/test/test_bug345512.html
@@ -1125,12 +1125,8 @@ element
 .
 validationMessage
 "
-The
-field
-value
-is
-not
-in
+Please
+match
 the
 requested
 format
@@ -2119,14 +2115,13 @@ element
 title
 =
 "
-This
+this
 is
 an
 explanation
 of
 the
 regexp
-.
 "
 ;
 is
@@ -2135,21 +2130,21 @@ element
 .
 validationMessage
 "
-The
-field
-value
-is
-not
-in
+Please
+match
 the
 requested
 format
-.
+:
 "
 +
 element
 .
 title
++
+"
+.
+"
 "
 Validation
 message
@@ -2172,12 +2167,8 @@ element
 .
 validationMessage
 "
-The
-field
-value
-is
-not
-in
+Please
+match
 the
 requested
 format
