--- a/content/html/content/test/test_bug345822.html
+++ b/content/html/content/test/test_bug345822.html
@@ -685,15 +685,15 @@ element
 .
 validationMessage
 "
-This
-checkbox
-is
-mandatory
-you
-have
-to
+Please
 check
-it
+this
+box
+if
+you
+want
+to
+proceed
 .
 "
 "
@@ -724,9 +724,7 @@ element
 .
 validationMessage
 "
-You
-have
-to
+Please
 select
 one
 of
@@ -762,9 +760,7 @@ element
 .
 validationMessage
 "
-You
-have
-to
+Please
 select
 a
 file
@@ -791,15 +787,11 @@ element
 .
 validationMessage
 "
-This
-field
-is
-mandatory
-you
-have
-to
+Please
 fill
-it
+out
+this
+field
 .
 "
 "
