Bug 579244 - attempt to fix an intermittent test timeout by ensuring that onload fires. a=NPOTB
UltraBlame original commit: 0a5670fcfbff909ec1f9d0054edb0d963eb24703

--- a/content/html/document/test/test_bug446483.html
+++ b/content/html/document/test/test_bug446483.html
@@ -150,38 +150,6 @@ display
 "
 >
 <
-iframe
-src
-=
-"
-bug446483
--
-iframe
-.
-html
-"
->
-<
-/
-iframe
->
-<
-iframe
-src
-=
-"
-bug446483
--
-iframe
-.
-html
-"
->
-<
-/
-iframe
->
-<
 /
 p
 >
@@ -280,6 +248,61 @@ runTest
 (
 )
 {
+document
+.
+getElementById
+(
+'
+display
+'
+)
+.
+innerHTML
+=
+'
+<
+iframe
+src
+=
+"
+bug446483
+-
+iframe
+.
+html
+"
+>
+<
+\
+/
+iframe
+>
+\
+n
+'
++
+'
+<
+iframe
+src
+=
+"
+bug446483
+-
+iframe
+.
+html
+"
+>
+<
+\
+/
+iframe
+>
+\
+n
+'
+;
 setInterval
 (
 gc
