Bug 563070 - Use a local image, not an image from www.google.com
UltraBlame original commit: 2dc28d22956c0dcdaf6dccdad1d84fee9b55b453

--- a/gfx/tests/crashtests/467703-1.xhtml
+++ b/gfx/tests/crashtests/467703-1.xhtml
@@ -28,19 +28,22 @@ background
 :
 url
 (
-http
-:
-/
-/
-www
 .
-google
 .
-com
+/
+.
+.
+/
+.
+.
+/
+testing
+/
+crashtest
 /
 images
 /
-logo_sm
+tree
 .
 gif
 )
