Bug 599258 - Fix random orange on content/html/content/test/test_bug561636.html. r=jst a=test
UltraBlame original commit: 842d82ff333cdc7a6536a6498f030500de57d1e7

--- a/content/html/content/test/test_bug561636.html
+++ b/content/html/content/test/test_bug561636.html
@@ -130,6 +130,14 @@ head
 >
 <
 body
+onload
+=
+"
+runTest
+(
+)
+;
+"
 >
 <
 a
@@ -516,6 +524,11 @@ invalidformsubmit
 "
 )
 ;
+function
+runTest
+(
+)
+{
 /
 /
 The
@@ -550,6 +563,19 @@ that
 /
 case
 .
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
 if
 (
 observers
@@ -814,6 +840,22 @@ valid
 "
 )
 ;
+/
+/
+Next
+test
+.
+document
+.
+forms
+[
+4
+]
+.
+submit
+(
+)
+;
 }
 false
 )
@@ -1027,17 +1069,7 @@ click
 (
 )
 ;
-document
-.
-forms
-[
-3
-]
-.
-submit
-(
-)
-;
+}
 }
 <
 /
