--- a/editor/libeditor/html/tests/test_bug520189.html
+++ b/editor/libeditor/html/tests/test_bug520189.html
@@ -3782,7 +3782,7 @@ mm
 isIFrame
 :
 true
-insertHTML
+indirectPaste
 :
 true
 payload
@@ -3865,7 +3865,7 @@ id
 "
 nn
 "
-insertHTML
+indirectPaste
 :
 true
 payload
@@ -4158,69 +4158,6 @@ focus
 (
 )
 ;
-if
-(
-"
-insertHTML
-"
-in
-test
-)
-{
-if
-(
-"
-isIFrame
-"
-in
-test
-)
-{
-elem
-.
-contentDocument
-.
-execCommand
-(
-"
-inserthtml
-"
-false
-test
-.
-payload
-)
-;
-}
-else
-{
-getSelection
-(
-)
-.
-collapse
-(
-elem
-0
-)
-;
-document
-.
-execCommand
-(
-"
-inserthtml
-"
-false
-test
-.
-payload
-)
-;
-}
-}
-else
-{
 netscape
 .
 security
@@ -4232,35 +4169,6 @@ enablePrivilege
 "
 UniversalXPConnect
 "
-)
-;
-var
-clipboard
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-widget
-/
-clipboard
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIClipboard
 )
 ;
 var
@@ -4357,6 +4265,126 @@ data
 length
 *
 2
+)
+;
+if
+(
+"
+indirectPaste
+"
+in
+test
+)
+{
+var
+editor
+win
+;
+if
+(
+"
+isIFrame
+"
+in
+test
+)
+{
+win
+=
+elem
+.
+contentDocument
+.
+defaultView
+;
+}
+else
+{
+getSelection
+(
+)
+.
+collapse
+(
+elem
+0
+)
+;
+win
+=
+window
+;
+}
+editor
+=
+win
+.
+QueryInterface
+(
+Components
+.
+interfaces
+.
+nsIInterfaceRequestor
+)
+.
+getInterface
+(
+Components
+.
+interfaces
+.
+nsIWebNavigation
+)
+.
+QueryInterface
+(
+Components
+.
+interfaces
+.
+nsIEditorDocShell
+)
+.
+editor
+;
+editor
+.
+pasteTransferable
+(
+trans
+)
+;
+}
+else
+{
+var
+clipboard
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+widget
+/
+clipboard
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIClipboard
 )
 ;
 clipboard
