Bug 596762: Allow specification of differing IPC preferences for each architecture in a universal binary. r=josh a=blocking-b7
UltraBlame original commit: e0d1f460215cb4461ae2c64bf6ae1766709d6674

--- a/modules/plugin/test/mochitest/test_GCrace.html
+++ b/modules/plugin/test/mochitest/test_GCrace.html
@@ -167,64 +167,13 @@ start
 (
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-var
-prefs
-=
-Components
-.
-classes
-[
-'
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-'
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIPrefBranch
-)
-;
 if
 (
 !
-prefs
+SimpleTest
 .
-getBoolPref
+testPluginIsOOP
 (
-'
-dom
-.
-ipc
-.
-plugins
-.
-enabled
-'
 )
 )
 {
@@ -236,11 +185,11 @@ Skipping
 this
 test
 when
-IPC
-plugins
-are
+test
+plugin
+is
 not
-enabled
+OOP
 .
 "
 )
