--- a/modules/plugin/test/mochitest/test_hanging.html
+++ b/modules/plugin/test/mochitest/test_hanging.html
@@ -134,6 +134,42 @@ frameLoaded_toCrash
 (
 )
 {
+if
+(
+!
+SimpleTest
+.
+testPluginIsOOP
+(
+)
+)
+{
+ok
+(
+true
+"
+Skipping
+this
+test
+when
+test
+plugin
+is
+not
+OOP
+.
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
 netscape
 .
 security
@@ -176,51 +212,6 @@ interfaces
 nsIPrefBranch
 )
 ;
-if
-(
-!
-prefs
-.
-getBoolPref
-(
-'
-dom
-.
-ipc
-.
-plugins
-.
-enabled
-'
-)
-)
-{
-ok
-(
-true
-"
-Skipping
-this
-test
-when
-IPC
-plugins
-are
-not
-enabled
-.
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-return
-;
-}
 /
 /
 the
