Bug 599628 - Fix test timeout for Gecko consumers without invalidformsubmit observers. r=callek a=test
UltraBlame original commit: d0d3ac2ce08c7486acea217569be1eef41150b94

--- a/content/html/content/test/test_bug561636.html
+++ b/content/html/content/test/test_bug561636.html
@@ -457,6 +457,17 @@ Bug
 *
 *
 /
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
+function
+runTest
+(
+)
+{
 var
 formSubmitted
 =
@@ -524,11 +535,6 @@ invalidformsubmit
 "
 )
 ;
-function
-runTest
-(
-)
-{
 /
 /
 The
@@ -563,21 +569,9 @@ that
 /
 case
 .
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
 if
 (
+!
 observers
 .
 hasMoreElements
@@ -587,10 +581,13 @@ hasMoreElements
 {
 SimpleTest
 .
-waitForExplicitFinish
+finish
 (
 )
 ;
+return
+;
+}
 /
 /
 Initialize
@@ -1069,7 +1066,6 @@ click
 (
 )
 ;
-}
 }
 <
 /
