Bug 543800 Package chrome style tests into .jar file for Android testing r=ctalbert a=NPOTB
UltraBlame original commit: 0f998c9f8728dc9069edef4c52ca2ed84235b909

--- a/dom/tests/mochitest/whatwg/postMessage_chrome_helper.html
+++ b/dom/tests/mochitest/whatwg/postMessage_chrome_helper.html
@@ -30,11 +30,58 @@ application
 javascript
 "
 >
+var
+gPrePath
+=
+"
+"
+;
 function
 receiveMessage
 (
 evt
 )
+{
+if
+(
+evt
+.
+data
+.
+substring
+(
+0
+9
+)
+=
+=
+"
+chrome
+:
+/
+/
+"
+)
+{
+gPrePath
+=
+evt
+.
+data
+;
+respond
+(
+"
+path
+-
+is
+-
+set
+"
+)
+;
+}
+else
 {
 /
 /
@@ -160,13 +207,7 @@ origin
 !
 =
 =
-"
-chrome
-:
-/
-/
-mochikit
-"
+gPrePath
 )
 msg
 +
@@ -225,6 +266,7 @@ respond
 msg
 )
 ;
+}
 }
 function
 respond
