--- a/dom/tests/mochitest/whatwg/test_postMessage_chrome.html
+++ b/dom/tests/mochitest/whatwg/test_postMessage_chrome.html
@@ -405,6 +405,22 @@ data
 {
 case
 "
+path
+-
+is
+-
+set
+"
+:
+chromePathIsSet
+(
+evt
+)
+;
+break
+;
+case
+"
 post
 -
 to
@@ -572,6 +588,27 @@ security
 "
 )
 ;
+window
+.
+frames
+.
+contentDomain
+.
+postMessage
+(
+prepath
+"
+*
+"
+)
+;
+}
+function
+chromePathIsSet
+(
+evt
+)
+{
 window
 .
 frames
