--- a/content/html/content/test/test_bug585508.html
+++ b/content/html/content/test/test_bug585508.html
@@ -280,12 +280,6 @@ get
 "
 post
 "
-"
-put
-"
-"
-delete
-"
 ]
 /
 /
@@ -299,6 +293,25 @@ values
 "
 "
 foo
+"
+]
+/
+/
+TODO
+values
+see
+bug
+583289
+and
+bug
+583288
+.
+[
+"
+delete
+"
+"
+put
 "
 ]
 ]
