Bug 597301: Add support for access-control-expose-headers. r=jst a=blocker
UltraBlame original commit: 9df5d817b35b5f11a21512dbeaf1f05beb869e52

--- a/content/base/test/file_CrossSiteXHR_inner.html
+++ b/content/base/test/file_CrossSiteXHR_inner.html
@@ -235,72 +235,25 @@ xhr
 .
 onload
 =
-function
-(
-)
-{
-res
-.
-status
-=
-xhr
-.
-status
-;
-res
-.
-statusText
-=
-xhr
-.
-statusText
-;
-res
-.
-responseXML
-=
-xhr
-.
-responseXML
-?
-(
-new
-XMLSerializer
-(
-)
-)
-.
-serializeToString
-(
-xhr
-.
-responseXML
-)
-:
-null
-;
-res
-.
-responseText
-=
-xhr
-.
-responseText
-;
-post
-(
-e
-res
-)
-;
-}
-;
 xhr
 .
 onerror
 =
 function
 (
+event
+)
+{
+if
+(
+event
+.
+type
+=
+=
+"
+error
+"
 )
 {
 res
@@ -309,6 +262,7 @@ didFail
 =
 true
 ;
+}
 res
 .
 status
@@ -366,6 +320,37 @@ xhr
 .
 responseText
 ;
+res
+.
+responseHeaders
+=
+{
+}
+;
+for
+(
+responseHeader
+in
+req
+.
+responseHeaders
+)
+{
+res
+.
+responseHeaders
+[
+responseHeader
+]
+=
+xhr
+.
+getResponseHeader
+(
+responseHeader
+)
+;
+}
 post
 (
 e
