--- a/content/base/test/test_CrossSiteXHR.html
+++ b/content/base/test/test_CrossSiteXHR.html
@@ -3257,6 +3257,368 @@ preflightStatus
 :
 200
 }
+/
+/
+exposed
+headers
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+responseHeaders
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+x
+header
+"
+}
+exposeHeaders
+:
+"
+x
+-
+my
+-
+header
+"
+expectedResponseHeaders
+:
+[
+"
+x
+-
+my
+-
+header
+"
+]
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+origin
+:
+"
+http
+:
+/
+/
+invalid
+"
+responseHeaders
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+x
+header
+"
+}
+exposeHeaders
+:
+"
+x
+-
+my
+-
+header
+"
+expectedResponseHeaders
+:
+[
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+responseHeaders
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+x
+header
+"
+}
+expectedResponseHeaders
+:
+[
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+responseHeaders
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+x
+header
+"
+}
+exposeHeaders
+:
+"
+x
+-
+my
+-
+header
+y
+"
+expectedResponseHeaders
+:
+[
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+responseHeaders
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+x
+header
+"
+}
+exposeHeaders
+:
+"
+y
+x
+-
+my
+-
+header
+"
+expectedResponseHeaders
+:
+[
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+responseHeaders
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+x
+header
+"
+}
+exposeHeaders
+:
+"
+x
+-
+my
+-
+header
+y
+-
+my
+-
+header
+z
+"
+expectedResponseHeaders
+:
+[
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+responseHeaders
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+x
+header
+"
+}
+exposeHeaders
+:
+"
+x
+-
+my
+-
+header
+y
+-
+my
+-
+hea
+(
+er
+"
+expectedResponseHeaders
+:
+[
+]
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+responseHeaders
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+x
+header
+"
+"
+y
+-
+my
+-
+header
+"
+:
+"
+y
+header
+"
+}
+exposeHeaders
+:
+"
+y
+-
+my
+-
+header
+z
+-
+my
+-
+header
+"
+expectedResponseHeaders
+:
+[
+"
+y
+-
+my
+-
+header
+"
+]
+}
 ]
 ;
 if
@@ -3294,6 +3656,11 @@ allowOrigin
 +
 escape
 (
+test
+.
+origin
+|
+|
 origin
 )
 method
@@ -3316,6 +3683,11 @@ body
 test
 .
 body
+responseHeaders
+:
+test
+.
+responseHeaders
 }
 ;
 if
@@ -3690,6 +4062,58 @@ test
 .
 preflightStatus
 ;
+if
+(
+test
+.
+responseHeaders
+)
+req
+.
+url
++
+=
+"
+&
+responseHeaders
+=
+"
++
+escape
+(
+test
+.
+responseHeaders
+.
+toSource
+(
+)
+)
+;
+if
+(
+test
+.
+exposeHeaders
+)
+req
+.
+url
++
+=
+"
+&
+exposeHeaders
+=
+"
++
+escape
+(
+test
+.
+exposeHeaders
+)
+;
 loaderWindow
 .
 postMessage
@@ -4036,6 +4460,113 @@ toSource
 )
 ;
 }
+if
+(
+test
+.
+responseHeaders
+)
+{
+for
+(
+header
+in
+test
+.
+responseHeaders
+)
+{
+if
+(
+test
+.
+expectedResponseHeaders
+.
+indexOf
+(
+header
+)
+=
+=
+-
+1
+)
+{
+is
+(
+res
+.
+responseHeaders
+[
+header
+]
+null
+"
+wrong
+response
+header
+(
+"
++
+header
++
+"
+)
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+}
+else
+{
+is
+(
+res
+.
+responseHeaders
+[
+header
+]
+test
+.
+responseHeaders
+[
+header
+]
+"
+wrong
+response
+header
+(
+"
++
+header
++
+"
+)
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+}
+}
+}
 }
 else
 {
@@ -4203,6 +4734,56 @@ toSource
 )
 )
 ;
+if
+(
+test
+.
+responseHeaders
+)
+{
+for
+(
+header
+in
+test
+.
+responseHeaders
+)
+{
+is
+(
+res
+.
+responseHeaders
+[
+header
+]
+null
+"
+wrong
+response
+header
+(
+"
++
+header
++
+"
+)
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+}
+}
 }
 }
 /
