Bug 597301: Update CORS to latest spec. r=jst a=blocker
UltraBlame original commit: a5b5aeb0b4f0273dace1bbcfe209c87245c4dccd

--- a/content/base/test/test_CrossSiteXHR.html
+++ b/content/base/test/test_CrossSiteXHR.html
@@ -386,10 +386,17 @@ org
 ;
 yield
 ;
-passTests
+tests
 =
 [
+/
+/
+Plain
+request
 {
+pass
+:
+1
 method
 :
 "
@@ -399,7 +406,15 @@ noAllowPreflight
 :
 1
 }
+/
+/
+Default
+allowed
+headers
 {
+pass
+:
+1
 method
 :
 "
@@ -415,9 +430,9 @@ Type
 "
 :
 "
-baz
+text
 /
-bin
+plain
 "
 "
 Accept
@@ -445,6 +460,61 @@ noAllowPreflight
 1
 }
 {
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+foo
+/
+bar
+"
+"
+Accept
+"
+:
+"
+foo
+/
+bar
+"
+"
+Accept
+-
+Language
+"
+:
+"
+sv
+-
+SE
+"
+}
+noAllowPreflight
+:
+1
+}
+/
+/
+Custom
+headers
+{
+pass
+:
+1
 method
 :
 "
@@ -476,6 +546,683 @@ header
 "
 }
 {
+pass
+:
+1
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+X
+-
+My
+-
+Header
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+"
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+"
+:
+"
+secondValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+-
+long
+-
+header
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+%
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+%
+-
+header
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+"
+}
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+y
+-
+my
+-
+header
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+y
+-
+my
+-
+header
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+y
+-
+my
+-
+header
+z
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+y
+-
+my
+-
+he
+(
+ader
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+GET
+"
+headers
+:
+{
+"
+myheader
+"
+:
+"
+"
+}
+allowMethods
+:
+"
+myheader
+"
+}
+/
+/
+Multiple
+custom
+headers
+{
+pass
+:
+1
 method
 :
 "
@@ -531,6 +1278,9 @@ header
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -586,6 +1336,9 @@ header
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -641,6 +1394,9 @@ header
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -696,6 +1452,9 @@ header
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -739,6 +1498,9 @@ header
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -785,37 +1547,9 @@ header
 "
 }
 {
-method
+pass
 :
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-X
--
-My
--
-Header
-"
-}
-{
+0
 method
 :
 "
@@ -836,155 +1570,9 @@ header
 myValue
 "
 "
-long
+y
 -
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
+my
 -
 header
 "
@@ -1001,160 +1589,12 @@ x
 my
 -
 header
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
--
-long
--
-header
 "
 }
 {
+pass
+:
+0
 method
 :
 "
@@ -1167,13 +1607,21 @@ headers
 x
 -
 my
-%
 -
 header
 "
 :
 "
-myValue
+"
+"
+y
+-
+my
+-
+header
+"
+:
+"
 "
 }
 allowHeaders
@@ -1182,12 +1630,18 @@ allowHeaders
 x
 -
 my
-%
 -
 header
 "
 }
+/
+/
+HEAD
+requests
 {
+pass
+:
+1
 method
 :
 "
@@ -1197,7 +1651,16 @@ noAllowPreflight
 :
 1
 }
+/
+/
+HEAD
+with
+safe
+headers
 {
+pass
+:
+1
 method
 :
 "
@@ -1213,9 +1676,9 @@ Type
 "
 :
 "
-baz
+text
 /
-bin
+plain
 "
 "
 Accept
@@ -1243,6 +1706,228 @@ noAllowPreflight
 1
 }
 {
+pass
+:
+0
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+foo
+/
+bar
+"
+"
+Accept
+"
+:
+"
+foo
+/
+bar
+"
+"
+Accept
+-
+Language
+"
+:
+"
+sv
+-
+SE
+"
+}
+noAllowPreflight
+:
+1
+}
+/
+/
+HEAD
+with
+custom
+headers
+{
+pass
+:
+1
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+}
+{
+pass
+:
+0
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+y
+-
+my
+-
+header
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+HEAD
+"
+headers
+:
+{
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+y
+-
+my
+-
+header
+"
+}
+/
+/
+POST
+tests
+{
+pass
+:
+1
 method
 :
 "
@@ -1259,6 +1944,9 @@ noAllowPreflight
 1
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -1266,6 +1954,28 @@ POST
 "
 }
 {
+pass
+:
+1
+method
+:
+"
+POST
+"
+noAllowPreflight
+:
+1
+}
+/
+/
+POST
+with
+standard
+headers
+{
+pass
+:
+1
 method
 :
 "
@@ -1297,6 +2007,85 @@ noAllowPreflight
 1
 }
 {
+pass
+:
+1
+method
+:
+"
+POST
+"
+body
+:
+"
+hi
+there
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+multipart
+/
+form
+-
+data
+"
+}
+noAllowPreflight
+:
+1
+}
+{
+pass
+:
+1
+method
+:
+"
+POST
+"
+body
+:
+"
+hi
+there
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+application
+/
+x
+-
+www
+-
+form
+-
+urlencoded
+"
+}
+noAllowPreflight
+:
+1
+}
+{
+pass
+:
+0
 method
 :
 "
@@ -1325,6 +2114,34 @@ bar
 }
 }
 {
+pass
+:
+0
+method
+:
+"
+POST
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+foo
+/
+bar
+"
+}
+}
+{
+pass
+:
+1
 method
 :
 "
@@ -1375,7 +2192,16 @@ noAllowPreflight
 :
 1
 }
+/
+/
+POST
+with
+custom
+headers
 {
+pass
+:
+1
 method
 :
 "
@@ -1433,6 +2259,9 @@ header
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -1475,6 +2304,148 @@ header
 "
 }
 {
+pass
+:
+1
+method
+:
+"
+POST
+"
+body
+:
+"
+hi
+there
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+text
+/
+plain
+"
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+POST
+"
+body
+:
+"
+hi
+there
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+foo
+/
+bar
+"
+"
+x
+-
+my
+-
+header
+"
+:
+"
+myValue
+"
+}
+allowHeaders
+:
+"
+x
+-
+my
+-
+header
+content
+-
+type
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+POST
+"
+body
+:
+"
+hi
+there
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+foo
+/
+bar
+"
+}
+noAllowPreflight
+:
+1
+}
+{
+pass
+:
+0
 method
 :
 "
@@ -1523,6 +2494,9 @@ header
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -1554,6 +2528,9 @@ header
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -1592,7 +2569,14 @@ _
 %
 "
 }
+/
+/
+Other
+methods
 {
+pass
+:
+1
 method
 :
 "
@@ -1605,6 +2589,34 @@ DELETE
 "
 }
 {
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowHeaders
+:
+"
+DELETE
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+}
+{
+pass
+:
+0
 method
 :
 "
@@ -1613,68 +2625,12 @@ DELETE
 allowMethods
 :
 "
-POST
-PUT
-DELETE
 "
 }
 {
-method
+pass
 :
-"
-DELETE
-"
-allowMethods
-:
-"
-POST
-DELETE
-PUT
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-DELETE
-POST
-PUT
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-POST
-PUT
-DELETE
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-POST
-PUT
-DELETE
-"
-}
-{
+1
 method
 :
 "
@@ -1689,6 +2645,94 @@ DELETE
 "
 }
 {
+pass
+:
+1
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+POST
+DELETE
+PUT
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+DELETE
+POST
+PUT
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+POST
+PUT
+DELETE
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+POST
+PUT
+DELETE
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+POST
+PUT
+DELETE
+"
+}
+{
+pass
+:
+1
 method
 :
 "
@@ -1702,6 +2746,175 @@ DELETE
 "
 }
 {
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+PUT
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+DELETEZ
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+DELETE
+PUT
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+DELETE
+PUT
+Z
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+DELETE
+PU
+(
+T
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+PUT
+DELETE
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+PUT
+Z
+DELETE
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+DELETE
+"
+allowMethods
+:
+"
+PU
+(
+T
+DELETE
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+MYMETHOD
+"
+allowMethods
+:
+"
+myMethod
+"
+}
+{
+pass
+:
+0
+method
+:
+"
+PUT
+"
+allowMethods
+:
+"
+put
+"
+}
+/
+/
+Progress
+events
+{
+pass
+:
+1
 method
 :
 "
@@ -1735,6 +2948,9 @@ uploadprogress
 "
 }
 {
+pass
+:
+1
 method
 :
 "
@@ -1767,464 +2983,138 @@ uploadProgress
 progress
 "
 }
-]
-;
-failTests
-=
-[
 {
-method
+pass
 :
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-"
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-y
--
-my
--
-header
-"
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-x
--
-my
--
-header
-y
--
-my
--
-header
-"
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-x
--
-my
--
-header
-y
--
-my
--
-header
-z
-"
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-x
--
-my
--
-header
-y
--
-my
--
-he
-(
-ader
-"
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-"
-y
--
-my
--
-header
-"
-:
-"
-secondValue
-"
-}
-allowHeaders
-:
-"
-x
--
-my
--
-header
-"
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-"
-}
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-"
-"
-y
--
-my
--
-header
-"
-:
-"
-"
-}
-allowHeaders
-:
-"
-x
--
-my
--
-header
-"
-}
-{
-method
-:
-"
-GET
-"
-headers
-:
-{
-"
-myheader
-"
-:
-"
-"
-}
-allowMethods
-:
-"
-myheader
-"
-}
-{
-method
-:
-"
-HEAD
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-}
-{
-method
-:
-"
-HEAD
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-"
-}
-{
-method
-:
-"
-HEAD
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-y
--
-my
--
-header
-"
-}
-{
-method
-:
-"
-HEAD
-"
-headers
-:
-{
-"
-x
--
-my
--
-header
-"
-:
-"
-myValue
-"
-}
-allowHeaders
-:
-"
-x
--
-my
--
-header
-y
--
-my
--
-header
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowHeaders
-:
-"
-DELETE
-"
-}
-{
+0
 method
 :
 "
 POST
+"
+body
+:
+"
+hi
+there
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+text
+/
+plain
+"
+}
+uploadProgress
+:
+"
+uploadprogress
 "
 noAllowPreflight
 :
 1
 }
 {
+pass
+:
+0
+method
+:
+"
+POST
+"
+body
+:
+"
+hi
+there
+"
+headers
+:
+{
+"
+Content
+-
+Type
+"
+:
+"
+text
+/
+plain
+"
+}
+uploadProgress
+:
+"
+progress
+"
+noAllowPreflight
+:
+1
+}
+/
+/
+Status
+messages
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+noAllowPreflight
+:
+1
+status
+:
+404
+statusMessage
+:
+"
+nothin
+'
+here
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
+noAllowPreflight
+:
+1
+status
+:
+401
+statusMessage
+:
+"
+no
+can
+do
+"
+}
+{
+pass
+:
+1
 method
 :
 "
@@ -2251,231 +3141,121 @@ foo
 bar
 "
 }
+allowHeaders
+:
+"
+content
+-
+type
+"
+status
+:
+500
+statusMessage
+:
+"
+server
+boo
+"
+}
+{
+pass
+:
+1
+method
+:
+"
+GET
+"
 noAllowPreflight
 :
 1
-}
-{
-method
+status
+:
+200
+statusMessage
 :
 "
-DELETE
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
+Yes
+!
+!
 "
 }
 {
+pass
+:
+0
 method
 :
 "
-DELETE
-"
-allowMethods
-:
-"
-PUT
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-DELETEZ
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-DELETE
-PUT
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-DELETE
-PUT
-Z
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-DELETE
-PU
-(
-T
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-PUT
-DELETE
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-PUT
-Z
-DELETE
-"
-}
-{
-method
-:
-"
-DELETE
-"
-allowMethods
-:
-"
-PU
-(
-T
-DELETE
-"
-}
-{
-method
-:
-"
-MYMETHOD
-"
-allowMethods
-:
-"
-myMethod
-"
-}
-{
-method
-:
-"
-PUT
-"
-allowMethods
-:
-"
-put
-"
-}
-{
-method
-:
-"
-POST
-"
-body
-:
-"
-hi
-there
+GET
 "
 headers
 :
 {
 "
-Content
+x
 -
-Type
+my
+-
+header
 "
 :
 "
-text
-/
-plain
+header
+value
 "
 }
-noAllowPreflight
-:
-1
-uploadProgress
+allowHeaders
 :
 "
-uploadprogress
+x
+-
+my
+-
+header
 "
+preflightStatus
+:
+400
 }
 {
+pass
+:
+1
 method
 :
 "
-POST
-"
-body
-:
-"
-hi
-there
+GET
 "
 headers
 :
 {
 "
-Content
+x
 -
-Type
+my
+-
+header
 "
 :
 "
-text
-/
-plain
+header
+value
 "
 }
-noAllowPreflight
-:
-1
-uploadProgress
+allowHeaders
 :
 "
-progress
+x
+-
+my
+-
+header
 "
+preflightStatus
+:
+200
 }
 ]
 ;
@@ -2485,9 +3265,7 @@ if
 runPreflightTests
 )
 {
-passTests
-=
-failTests
+tests
 =
 [
 ]
@@ -2498,9 +3276,10 @@ each
 (
 test
 in
-passTests
+tests
 )
 {
+var
 req
 =
 {
@@ -2509,7 +3288,6 @@ url
 baseURL
 +
 "
-&
 allowOrigin
 =
 "
@@ -2518,7 +3296,40 @@ escape
 (
 origin
 )
+method
+:
+test
+.
+method
+headers
+:
+test
+.
+headers
+uploadProgress
+:
+test
+.
+uploadProgress
+body
+:
+test
+.
+body
+}
+;
+if
+(
+test
+.
+pass
+)
+{
+req
+.
+url
 +
+=
 "
 &
 origin
@@ -2539,28 +3350,8 @@ requestMethod
 test
 .
 method
-method
-:
-test
-.
-method
-headers
-:
-test
-.
-headers
-uploadProgress
-:
-test
-.
-uploadProgress
-body
-:
-test
-.
-body
-}
 ;
+}
 if
 (
 test
@@ -2579,6 +3370,11 @@ noAllowPreflight
 ;
 if
 (
+test
+.
+pass
+&
+&
 "
 headers
 "
@@ -2586,6 +3382,96 @@ in
 test
 )
 {
+function
+isUnsafeHeader
+(
+name
+)
+{
+lName
+=
+name
+.
+toLowerCase
+(
+)
+;
+return
+lName
+!
+=
+"
+accept
+"
+&
+&
+lName
+!
+=
+"
+accept
+-
+language
+"
+&
+&
+(
+lName
+!
+=
+"
+content
+-
+type
+"
+|
+|
+[
+"
+text
+/
+plain
+"
+"
+multipart
+/
+form
+-
+data
+"
+"
+application
+/
+x
+-
+www
+-
+form
+-
+urlencoded
+"
+]
+.
+indexOf
+(
+test
+.
+headers
+[
+name
+]
+.
+toLowerCase
+(
+)
+)
+=
+=
+-
+1
+)
+;
+}
 req
 .
 url
@@ -2624,45 +3510,16 @@ headers
 )
 ]
 .
+filter
+(
+isUnsafeHeader
+)
+.
 map
 (
 String
 .
 toLowerCase
-)
-.
-filter
-(
-function
-(
-name
-)
-name
-!
-=
-"
-content
--
-type
-"
-&
-&
-name
-!
-=
-"
-accept
-"
-&
-&
-name
-!
-=
-"
-accept
--
-language
-"
 )
 .
 sort
@@ -2771,6 +3628,68 @@ test
 body
 )
 ;
+if
+(
+test
+.
+status
+)
+{
+req
+.
+url
++
+=
+"
+&
+status
+=
+"
++
+test
+.
+status
+;
+req
+.
+url
++
+=
+"
+&
+statusMessage
+=
+"
++
+escape
+(
+test
+.
+statusMessage
+)
+;
+}
+if
+(
+test
+.
+preflightStatus
+)
+req
+.
+url
++
+=
+"
+&
+preflightStatus
+=
+"
++
+test
+.
+preflightStatus
+;
 loaderWindow
 .
 postMessage
@@ -2790,6 +3709,13 @@ eval
 yield
 )
 ;
+if
+(
+test
+.
+pass
+)
+{
 is
 (
 res
@@ -2814,6 +3740,61 @@ toSource
 )
 )
 ;
+if
+(
+test
+.
+status
+)
+{
+is
+(
+res
+.
+status
+test
+.
+status
+"
+wrong
+status
+in
+test
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+is
+(
+res
+.
+statusText
+test
+.
+statusMessage
+"
+wrong
+status
+text
+for
+"
++
+test
+.
+toSource
+(
+)
+)
+;
+}
+else
+{
 is
 (
 res
@@ -2857,6 +3838,7 @@ toSource
 )
 )
 ;
+}
 if
 (
 test
@@ -3055,139 +4037,8 @@ toSource
 ;
 }
 }
-for
-each
-(
-test
-in
-failTests
-)
+else
 {
-req
-=
-{
-url
-:
-baseURL
-+
-"
-allowOrigin
-=
-"
-+
-escape
-(
-origin
-)
-method
-:
-test
-.
-method
-headers
-:
-test
-.
-headers
-uploadProgress
-:
-test
-.
-uploadProgress
-body
-:
-test
-.
-body
-}
-;
-if
-(
-test
-.
-noAllowPreflight
-)
-req
-.
-url
-+
-=
-"
-&
-noAllowPreflight
-"
-;
-if
-(
-"
-allowHeaders
-"
-in
-test
-)
-req
-.
-url
-+
-=
-"
-&
-allowHeaders
-=
-"
-+
-escape
-(
-test
-.
-allowHeaders
-)
-;
-if
-(
-"
-allowMethods
-"
-in
-test
-)
-req
-.
-url
-+
-=
-"
-&
-allowMethods
-=
-"
-+
-escape
-(
-test
-.
-allowMethods
-)
-;
-loaderWindow
-.
-postMessage
-(
-req
-.
-toSource
-(
-)
-origin
-)
-;
-res
-=
-eval
-(
-yield
-)
-;
 is
 (
 res
@@ -3352,6 +4203,7 @@ toSource
 )
 )
 ;
+}
 }
 /
 /
